--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ input{
     font-size:18px;
 }
 input[type="submit"]{
-    background:limegreen;
+    background:black;
     color:black;
 }
 </style>
