--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@ input[type="submit"]{
 </style>
 </head>
 <body>
-<!-- I'm a comment. You won't actually see me on the web page.
-     You should write your header in the line below me! -->
-<h1>Haylee Ham</h1>
-<p>This is my first attempt at creating a website.</p>
+<h1>Public Press</h1>
+<h2>HEY HANNAH! GUESS WHAT -- THIS EXISTS</h2>
 <input type="email" placeholder="Email">
 <input type="submit">
 </body>
