--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
 body{
     text-align:center;
-    background:url("https://codecademy-content.s3.amazonaws.com/courses/web-beginner-en-3pc6w/images/splash.jpg");
+    background:url("http://i.imgur.com/MDX0Ekw.jpg");
     color:black;
     font-family:Helvetica;
     background-size:cover;
