--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
 <style>
 body{
     text-align:center;
-    background:url("http://i.imgur.com/MDX0Ekw.jpg");
+    background:url("http://i.imgur.com/MDX0Ekw.jpg") center center no-repeat fixed;
     color:black;
     font-family:Helvetica;
     background-size:cover;
-    background-position:center center;
-    background-repeat:no-repeat;
-    background-attachment:fixed;
 }
 p{
  font-size:24px;  
@@ -28,7 +25,24 @@ input[type="submit"]{
 </head>
 <body>
 <h1>Public Press</h1>
-<h2>HEY HANNAH! GUESS WHAT -- THIS EXISTS</h2>
+<h2>Sir Walter Elliot, of Kellynch Hall, in Somersetshire, was a man who,
+for his own amusement, never took up any book but the Baronetage; there
+he found occupation for an idle hour, and consolation in a distressed
+one; there his faculties were roused into admiration and respect, by
+contemplating the limited remnant of the earliest patents; there any
+unwelcome sensations, arising from domestic affairs changed naturally
+into pity and contempt as he turned over the almost endless creations
+of the last century; and there, if every other leaf were powerless, he
+could read his own history with an interest which never failed.  This
+was the page at which the favourite volume always opened:
+
+           "ELLIOT OF KELLYNCH HALL.
+
+"Walter Elliot, born March 1, 1760, married, July 15, 1784, Elizabeth,
+daughter of James Stevenson, Esq. of South Park, in the county of
+Gloucester, by which lady (who died 1800) he has issue Elizabeth, born
+June 1, 1785; Anne, born August 9, 1787; a still-born son, November 5,
+1789; Mary, born November 20, 1791."</h2>
 <input type="email" placeholder="Email">
 <input type="submit">
 </body>
