--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@ input[type="submit"]{
     color:black;
 }
 </style>
-</head>
+<head profile="http://www.w3.org/2005/10/profile">
+<link rel="icon" 
+      type="image/png" 
+      href="http://example.com/myicon.png">
 <body>
 <h1>Public Press</h1>
-<h2>Sir Walter Elliot, of Kellynch Hall, in Somersetshire, was a man who,
+<p>Sir Walter Elliot, of Kellynch Hall, in Somersetshire, was a man who,
 for his own amusement, never took up any book but the Baronetage; there
 he found occupation for an idle hour, and consolation in a distressed
 one; there his faculties were roused into admiration and respect, by
@@ -42,7 +45,7 @@ was the page at which the favourite volume always opened:
 daughter of James Stevenson, Esq. of South Park, in the county of
 Gloucester, by which lady (who died 1800) he has issue Elizabeth, born
 June 1, 1785; Anne, born August 9, 1787; a still-born son, November 5,
-1789; Mary, born November 20, 1791."</h2>
+1789; Mary, born November 20, 1791."</p>
 <input type="email" placeholder="Email">
 <input type="submit">
 </body>
