--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@ body{
 p{
  font-size:16px;  
 }
+center{
+    text-align:center;
+}
 </style>
 <head profile="http://www.w3.org/2005/10/profile">
 <link rel="icon" 
@@ -28,11 +31,9 @@ unwelcome sensations, arising from domestic affairs changed naturally
 into pity and contempt as he turned over the almost endless creations
 of the last century; and there, if every other leaf were powerless, he
 could read his own history with an interest which never failed.  This
-was the page at which the favourite volume always opened:
-
-           "ELLIOT OF KELLYNCH HALL.
-
-"Walter Elliot, born March 1, 1760, married, July 15, 1784, Elizabeth,
+was the page at which the favourite volume always opened:</p>
+<p class="center">"ELLIOT OF KELLYNCH HALL.</p>
+<p>"Walter Elliot, born March 1, 1760, married, July 15, 1784, Elizabeth,
 daughter of James Stevenson, Esq. of South Park, in the county of
 Gloucester, by which lady (who died 1800) he has issue Elizabeth, born
 June 1, 1785; Anne, born August 9, 1787; a still-born son, November 5,
