--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@ center{
 }
 </style>
 <head profile="http://www.w3.org/2005/10/profile">
-<link rel="icon" 
-      type="image/png" 
-      href="http://example.com/myicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 <body>
 <h1>Public Press</h1>
 <p>Sir Walter Elliot, of Kellynch Hall, in Somersetshire, was a man who,
@@ -32,8 +30,8 @@ into pity and contempt as he turned over the almost endless creations
 of the last century; and there, if every other leaf were powerless, he
 could read his own history with an interest which never failed.  This
 was the page at which the favourite volume always opened:</p>
-<p class="center">"ELLIOT OF KELLYNCH HALL.</p>
-<p>"Walter Elliot, born March 1, 1760, married, July 15, 1784, Elizabeth,
+<p class="center">"ELLIOT OF KELLYNCH HALL."</p>
+<p>Walter Elliot, born March 1, 1760, married, July 15, 1784, Elizabeth,
 daughter of James Stevenson, Esq. of South Park, in the county of
 Gloucester, by which lady (who died 1800) he has issue Elizabeth, born
 June 1, 1785; Anne, born August 9, 1787; a still-born son, November 5,
