--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@ center{
     text-align:center;
 }
 </style>
-<head>
-<link rel="shortcut icon" type="image/x-icon" href="http://imgur.com/juSWc8F">
+<head profile="http://www.w3.org/2005/10/profile">
+<link rel="icon" 
+      type="image/png" 
+      href="http://imgur.com/juSWc8F">
 <body>
 <h1>Public Press</h1>
 <p>Sir Walter Elliot, of Kellynch Hall, in Somersetshire, was a man who,
