--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head profile="http://www.w3.org/2005/10/profile">
+<link rel="icon" 
+      type="image/png" 
+      href="http://imgur.com/juSWc8F">>
 <style>
 body{
     text-align:center;
@@ -16,10 +19,7 @@ center{
     text-align:center;
 }
 </style>
-<head profile="http://www.w3.org/2005/10/profile">
-<link rel="icon" 
-      type="image/png" 
-      href="http://imgur.com/juSWc8F">
+</head>
 <body>
 <h1>Public Press</h1>
 <p>Sir Walter Elliot, of Kellynch Hall, in Somersetshire, was a man who,
