--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head profile="http://www.w3.org/2005/10/profile">
-<link rel="icon" 
-      type="image/png" 
-      href="http://imgur.com/juSWc8F">>
+<link rel="icon" href="http://imgur.com/juSWc8F" type="image/gif" sizes="16x16">
 <style>
 body{
     text-align:center;
