--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head profile="http://www.w3.org/2005/10/profile">
-<link rel="icon" href="http://imgur.com/juSWc8F" type="image/gif" sizes="16x16">
+<link rel="icon" href="http://i.imgur.com/juSWc8F.jpg" type="image/gif">
 <style>
 body{
     text-align:center;
@@ -30,7 +30,7 @@ into pity and contempt as he turned over the almost endless creations
 of the last century; and there, if every other leaf were powerless, he
 could read his own history with an interest which never failed.  This
 was the page at which the favourite volume always opened:</p>
-<p class="center">"ELLIOT OF KELLYNCH HALL."</p>
+<p class="center">"ELLIOT OF KELLYNCH HALL.</p>
 <p>Walter Elliot, born March 1, 1760, married, July 15, 1784, Elizabeth,
 daughter of James Stevenson, Esq. of South Park, in the county of
 Gloucester, by which lady (who died 1800) he has issue Elizabeth, born
