--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head profile="http://www.w3.org/2005/10/profile">
-<link rel="icon" href="http://i.imgur.com/juSWc8F.jpg" type="image/gif">
+<link rel="icon" href="http://i.imgur.com/Sh8otRn.jpg" type="image/gif">
 <style>
 body{
     text-align:center;
