--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head profile="http://www.w3.org/2005/10/profile">
 <link rel="icon" href="http://i.imgur.com/Sh8otRn.jpg" type="image/gif">
+<title>Public Press</title>
 <style>
 body{
     text-align:center;
