--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head profile="http://www.w3.org/2005/10/profile">
+<head>
 <link rel="icon" href="http://i.imgur.com/Sh8otRn.jpg" type="image/gif">
 <title>Public Press</title>
 <style>
