--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@ Gloucester, by which lady (who died 1800) he has issue Elizabeth, born
 June 1, 1785; Anne, born August 9, 1787; a still-born son, November 5,
 1789; Mary, born November 20, 1791."</p>
 <button type="button">Decrease Font Size</button>
-<button typ="button">Increase Font Size</button>
+<button type="button">Increase Font Size</button>
 </body>
 </html>
