--- a/index.html
+++ b/index.html
@@ -1,43 +1,42 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="icon" href="http://i.imgur.com/Sh8otRn.jpg" type="image/gif">
-<title>Public Press</title>
-<style>
-body{
-    text-align:center;
-    background:url("http://i.imgur.com/MDX0Ekw.jpg") center center no-repeat fixed;
-    color:black;
-    font-family:Helvetica;
-    background-size:cover;
-}
-p{
- font-size:16px;  
-}
-center{
-    text-align:center;
-}
-</style>
-</head>
-<body>
-<h1>Public Press</h1>
-<p>Sir Walter Elliot, of Kellynch Hall, in Somersetshire, was a man who,
-for his own amusement, never took up any book but the Baronetage; there
-he found occupation for an idle hour, and consolation in a distressed
-one; there his faculties were roused into admiration and respect, by
-contemplating the limited remnant of the earliest patents; there any
-unwelcome sensations, arising from domestic affairs changed naturally
-into pity and contempt as he turned over the almost endless creations
-of the last century; and there, if every other leaf were powerless, he
-could read his own history with an interest which never failed.  This
-was the page at which the favourite volume always opened:</p>
-<p class="center">"ELLIOT OF KELLYNCH HALL.</p>
-<p>Walter Elliot, born March 1, 1760, married, July 15, 1784, Elizabeth,
-daughter of James Stevenson, Esq. of South Park, in the county of
-Gloucester, by which lady (who died 1800) he has issue Elizabeth, born
-June 1, 1785; Anne, born August 9, 1787; a still-born son, November 5,
-1789; Mary, born November 20, 1791."</p>
-<button type="button">Decrease Font Size</button>
-<button type="button">Increase Font Size</button>
-</body>
+    <head>
+        <link rel="icon" href="http://i.imgur.com/Sh8otRn.jpg" type="image/gif">
+        <title>Public Press</title>
+        <style>
+            body{
+                text-align:center;
+                background:url("http://i.imgur.com/MDX0Ekw.jpg") center center no-repeat fixed;
+                color:black;
+                font-family:Helvetica;
+                background-size:cover;
+            }
+            .center{
+                text-align:center;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>Public Press</h1>
+        <div id="paragraph">
+            <p>Sir Walter Elliot, of Kellynch Hall, in Somersetshire, was a man who,
+            for his own amusement, never took up any book but the Baronetage; there
+            he found occupation for an idle hour, and consolation in a distressed
+            one; there his faculties were roused into admiration and respect, by
+            contemplating the limited remnant of the earliest patents; there any
+            unwelcome sensations, arising from domestic affairs changed naturally
+            into pity and contempt as he turned over the almost endless creations
+            of the last century; and there, if every other leaf were powerless, he
+            could read his own history with an interest which never failed.  This
+            was the page at which the favourite volume always opened:</p>
+            <p class="center">"ELLIOT OF KELLYNCH HALL.</p>
+            <p>Walter Elliot, born March 1, 1760, married, July 15, 1784, Elizabeth,
+            daughter of James Stevenson, Esq. of South Park, in the county of
+            Gloucester, by which lady (who died 1800) he has issue Elizabeth, born
+            June 1, 1785; Anne, born August 9, 1787; a still-born son, November 5,
+            1789; Mary, born November 20, 1791."</p>
+        </div>
+        <button type="button" name="decreasebutton" onclick="getElementById('paragraph').style.fontSize='8px'" >Decrease Font Size</button>
+        <button type="button" name="increasebutton" onclick="getElementById('paragraph').style.fontSize='24px'">Increase Font Size</button>
+    </body>
 </html>
