--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             .rightdiv{
                 width:39%;
                 font-weight:bold;
-                padding:5px
+                padding:5px;
+                vertical-align:top;
             }
         </style>
     </head>
