--- a/index.html
+++ b/index.html
@@ -3,40 +3,12 @@
     <head>
         <link rel="icon" href="http://i.imgur.com/Sh8otRn.jpg" type="image/gif">
         <title>Public Press</title>
-        <style>
-            *{box-sizing:border-box;}
-            body{
-                background:url("http://i.imgur.com/MDX0Ekw.jpg") center center no-repeat fixed;
-                color:black;
-                font-family:Helvetica;
-                background-size:cover;
-            }
-            div{
-                display:inline-block;
-            }
-            .center{
-                text-align:center;
-            }
-            .box{
-                border:1px solid black;
-                background-color:white;
-                padding:5px
-            }
-            .leftdiv{
-                width:60%;
-            }
-            .rightdiv{
-                width:39%;
-                font-weight:bold;
-                padding:5px;
-                vertical-align:top;
-            }
-        </style>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <h1>Public Press</h1>
         <div class="box leftdiv" id="paragraph">
-            <p>Sir Walter Elliot, of Kellynch Hall, in Somersetshire, was a man who,
+            <p class="indent">Sir Walter Elliot, of Kellynch Hall, in Somersetshire, was a man who,
             for his own amusement, never took up any book but the Baronetage; there
             he found occupation for an idle hour, and consolation in a distressed
             one; there his faculties were roused into admiration and respect, by
@@ -47,22 +19,67 @@
             could read his own history with an interest which never failed.  This
             was the page at which the favourite volume always opened:</p>
             <p class="center">"ELLIOT OF KELLYNCH HALL.</p>
-            <p>Walter Elliot, born March 1, 1760, married, July 15, 1784, Elizabeth,
+            <p class="indent">Walter Elliot, born March 1, 1760, married, July 15, 1784, Elizabeth,
             daughter of James Stevenson, Esq. of South Park, in the county of
             Gloucester, by which lady (who died 1800) he has issue Elizabeth, born
             June 1, 1785; Anne, born August 9, 1787; a still-born son, November 5,
             1789; Mary, born November 20, 1791."</p>
+            <p class="indent">Precisely such had the paragraph originally stood from the printer's
+            hands; but Sir Walter had improved it by adding, for the information of
+            himself and his family, these words, after the date of Mary's birth--
+            "Married, December 16, 1810, Charles, son and heir of Charles Musgrove,
+            Esq. of Uppercross, in the county of Somerset," and by inserting most
+            accurately the day of the month on which he had lost his wife.</p>
+            <p class="indent">Then followed the history and rise of the ancient and respectable
+            family, in the usual terms; how it had been first settled in Cheshire;
+            how mentioned in Dugdale, serving the office of high sheriff,
+            representing a borough in three successive parliaments, exertions of
+            loyalty, and dignity of baronet, in the first year of Charles II, with
+            all the Marys and Elizabeths they had married; forming altogether two
+            handsome duodecimo pages, and concluding with the arms and
+            motto:--"Principal seat, Kellynch Hall, in the county of Somerset," and
+            Sir Walter's handwriting again in this finale:--</p>
+            <p class="center">"Heir presumptive, William Walter Elliot, Esq., great grandson of the
+            second Sir Walter."</p>
+            <p class="indent">Vanity was the beginning and the end of Sir Walter Elliot's character;
+            vanity of person and of situation.  He had been remarkably handsome in
+            his youth; and, at fifty-four, was still a very fine man.  Few women
+            could think more of their personal appearance than he did, nor could
+            the valet of any new made lord be more delighted with the place he held
+            in society.  He considered the blessing of beauty as inferior only to
+            the blessing of a baronetcy; and the Sir Walter Elliot, who united
+            these gifts, was the constant object of his warmest respect and
+            devotion.</p>
+            <p class="indent">His good looks and his rank had one fair claim on his attachment; since
+            to them he must have owed a wife of very superior character to any
+            thing deserved by his own.  Lady Elliot had been an excellent woman,
+            sensible and amiable; whose judgement and conduct, if they might be
+            pardoned the youthful infatuation which made her Lady Elliot, had never
+            required indulgence afterwards.--She had humoured, or softened, or
+            concealed his failings, and promoted his real respectability for
+            seventeen years; and though not the very happiest being in the world
+            herself, had found enough in her duties, her friends, and her children,
+            to attach her to life, and make it no matter of indifference to her
+            when she was called on to quit them.--Three girls, the two eldest
+            sixteen and fourteen, was an awful legacy for a mother to bequeath, an
+            awful charge rather, to confide to the authority and guidance of a
+            conceited, silly father.  She had, however, one very intimate friend, a
+            sensible, deserving woman, who had been brought, by strong attachment
+            to herself, to settle close by her, in the village of Kellynch; and on
+            her kindness and advice, Lady Elliot mainly relied for the best help
+            and maintenance of the good principles and instruction which she had
+            been anxiously giving her daughters.</p>
         </div>
         <div class="rightdiv">
             <p>What font size would you like?</p>
             <form>
-                <input type="radio" name="fontsize" value="10px" onclick="getElementById('paragraph').style.fontSize='0.625em'">10
-                <input type="radio" name="fontsize" value="12px" onclick="getElementById('paragraph').style.fontSize='0.75em'">12
-                <input type="radio" name="fontsize" value="14px" onclick="getElementById('paragraph').style.fontSize='0.875em'">14
-                <input type="radio" name="fontsize" value="16px" onclick="getElementById('paragraph').style.fontSize='1em'">16
-                <input type="radio" name="fontsize" value="20px" onclick="getElementById('paragraph').style.fontSize='1.25em'">20
-                <input type="radio" name="fontsize" value="24px" onclick="getElementById('paragraph').style.fontSize='1.5em'">24
-                <input type="radio" name="fontsize" value="30px" onclick="getElementById('paragraph').style.fontSize='1.875em'">30
+                <input type="radio" name="fontsize" value="10px" id="fontSize10">10
+                <input type="radio" name="fontsize" value="12px" id="fontSize12">12
+                <input type="radio" name="fontsize" value="14px" id="fontSize14">14
+                <input type="radio" name="fontsize" value="16px" id="fontSize16">16
+                <input type="radio" name="fontsize" value="20px" id="fontSize20">20
+                <input type="radio" name="fontsize" value="24px" id="fontSize24">24
+                <input type="radio" name="fontsize" value="30px" id="fontSize30">30
             </form>
             <p>What font would you like?</p>
             <form>
@@ -80,5 +97,6 @@
                 </div>
             </form>
         </div>
+        <script type="text/javascript" src="index.js"></script>
     </body>
 </html>
