--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <input type="radio" name="fontsize" value="10px" id="fontSize10">10
                 <input type="radio" name="fontsize" value="12px" id="fontSize12">12
                 <input type="radio" name="fontsize" value="14px" id="fontSize14">14
-                <input type="radio" name="fontsize" value="16px" id="fontSize16">16
+                <input type="radio" name="fontsize" value="16px" id="fontSize16" checked>16
                 <input type="radio" name="fontsize" value="20px" id="fontSize20">20
                 <input type="radio" name="fontsize" value="24px" id="fontSize24">24
                 <input type="radio" name="fontsize" value="30px" id="fontSize30">30
@@ -84,7 +84,7 @@
             <p>What font would you like?</p>
             <form>
                 <div>
-                <input type="radio" name="font" value="Arial" onclick="getElementById('paragraph').style.fontFamily='Arial'">Arial
+                <input type="radio" name="font" value="Arial" onclick="getElementById('paragraph').style.fontFamily='Arial'" checked>Arial
                 </div>
                 <div>
                 <input type="radio" name="font" value="Gloucester" onclick="getElementById('paragraph').style.fontFamily='Cursive'">Cursive
