--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 	<head>
 		<link rel="icon" href="http://i.imgur.com/Sh8otRn.jpg" type="image/gif">
 		<title>Public Press</title>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="index.css">
 	</head>
 	<body>
+		<h1>Public Press <small><a href="build.html">Build Your Book</a></small></h1>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	</body>
 </html>
