--- a/build.html
+++ b/build.html
@@ -99,11 +99,22 @@
               </label>
             </div>
             <p class="padit">What font would you like?</p>
-            <button type="button" class="btn btn-primary" name="font" value="Arial" onclick="getElementById('paragraph').style.fontFamily='Arial'" checked>Arial</button>
-            <button type="button" class="btn btn-primary" name="font" value="Gloucester" onclick="getElementById('paragraph').style.fontFamily='Cursive'">Cursive</button>
-            <button type="button" class="btn btn-primary" name="font" value="Times" onclick="getElementById('paragraph').style.fontFamily='Times'">Times New Roman</button>
-            <button type="button" class="btn btn-primary" name="font" value="Courier" onclick="getElementById('paragraph').style.fontFamily='Courier'">Courier</button>
+            <div class="btn-group" data-toggle="buttons">
+                <label class="btn btn-primary">
+                    <input type="radio" name="font" value="Arial" onclick="getElementById('paragraph').style.fontFamily='Arial'" autocomplete="off" checked>Arial
+                </label>
+                <label class="btn btn-primary">
+                    <input type="radio" name="font" value="Cursive" onclick="getElementById('paragraph').style.fontFamily='Cursive'" autocomplete="off">Cursive
+                </label>
+                <label class="btn btn-primary">
+                    <input type="radio" name="font" value="Times" onclick="getElementById('paragraph').style.fontFamily='Times'" autocomplete="off">Times New Roman
+                </label>
+                <label class="btn btn-primary">
+                    <input type="radio" name="font" value="Courier" onclick="getElementById('paragraph').style.fontFamily='Courier'" autocomplete="off">Courier
+                </label>
+            </div>
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="build.js"></script>
     </div>    
