adding offset column

--- a/build.html
+++ b/build.html
@@ -73,7 +73,7 @@
             and maintenance of the good principles and instruction which she had
             been anxiously giving her daughters.</p>
         </div>
-        <div class="col-md-7">
+        <div class="col-md-6 col-md-offset-1">
             <p class="padit">What font size would you like?</p>
             <div class="btn-group" data-toggle="buttons">
               <label class="btn btn-success changeSize" data-fontSize="0.625em">
